feat(장소 관리 기능): 장소 등록 API 구현